...
                            'Assets/images/podcast.png'), // add the image asset here
                        height: 50, // set the height here
                        width: 50, // set the width here
                        fit: BoxFit.contain, // set the BoxFit property here
                      ),
                      IconButton(
                        key: Key('home_page_menu_button'),
                        icon: Icon(Icons.menu),
                        color: Colors.white, // add the menu icon here
                        onPressed: () {
                          // print("it was pressed");
                          Scaffold.of(context).openDrawer();
                          // add the onPressed callback here
...
          Divider(
            thickness: 2.0,
            color: Color(0xFF040a11),
          ),

          ListTile(
            key: Key('my_podcasts_button'),
            leading: Icon(
              Icons.mic,
              color: Colors.white,
            ),
            title: Text(
              'My Podcasts',
...
          ),
          Divider(
            thickness: 2.0,
            color: Color(0xFF040a11),
          ),
          ListTile(
            key: Key('account_settings_button'),
            leading: Icon(
              Icons.settings,
              color: Colors.white,
            ),
            title: Text(
              'Account Settings',
...
          Divider(
            thickness: 2.0,
            color: Color(0xFF040a11),
          ),
          (state.currentUser.is_admin != null && state.currentUser.is_admin)
              ? ListTile(
                  key: Key('admin_funfacts_button'),
                  leading: Icon(
                    Icons.note,
                    color: Colors.white,
                  ),
                  title: Text(
                    'Funfacts',
...
            child: Container(
              child: Column(
                children: [
                  Container(
                    width: double.infinity,
                    child: ElevatedButton(
                        key: Key('logout_button'),
                        style: ButtonStyle(
                            padding: MaterialStatePropertyAll(
                                EdgeInsets.symmetric(vertical: 20)),
                            backgroundColor: MaterialStatePropertyAll(
                                Color.fromARGB(255, 0, 128, 168))),
                        onPressed: () async {
...
                            style: ButtonStyle(
                                padding: MaterialStatePropertyAll(
                                    EdgeInsets.symmetric(
                                        vertical: 15, horizontal: 20)),
                                backgroundColor:
                                    MaterialStatePropertyAll(Colors.red)),
                            key: Key('delete_account_button'),
                            onPressed: () {
                              print('here in ui delete');
                              DeleteConfirmationDialog(
                                onConfirm: () async {
                                  print('here in ui delete 2');

...
  Widget build(BuildContext context) {
    return Padding(
      padding: EdgeInsets.symmetric(vertical: 25),
      child: Container(
        height: 50,
        child: TextField(
          key: Key('home_page_search_text_field'),
          scrollPadding: EdgeInsets.all(0),
          onEditingComplete: () {
            searchFocusNode.unfocus();
            BlocProvider.of<HomeBloc>(context)
                .add(PodcastSearched(searchTerm: searchInputController.text));
          },
          controller: searchInputController,
          focusNode: searchFocusNode,
          decoration: InputDecoration(
            hintText: '',
            suffixIcon: IconButton(
              key: Key('home_page_search_button'),
              icon: Icon(Icons.search),
              color: Colors.blue,
              onPressed: () {
                // Perform search functionality here
                searchFocusNode.unfocus();
                BlocProvider.of<HomeBloc>(context).add(
...
