...
        ),
      ),
      body: BlocBuilder<AddFunfactBloc, AddFunfactState>(
        builder: (context, state) {
          Widget errorMessage = Container();
          if (state is FunfactErrorState) {
            errorMessage = Text(
              'Error Occured. Try again',
              style: TextStyle(color: Colors.red),
            );
          } else if (state is AddFunfactSuccessState) {
            errorMessage = Text(
              'Successfully added',
...
