...
                ),
                trailing: Container(
                  width: 100,
                  child: Row(
                    children: [
                      IconButton(
                        key: Key("my_podcasts_edit_button"),
                        icon: Icon(
                          Icons.edit_outlined,
                          color: Colors.white,
                        ),
                        onPressed: () {
                          Navigator.push(
...
                                      podcast: currentPodcast,
                                    )),
                          );
                        },
                      ),
                      IconButton(
                        key: Key("my_podcasts_delete_button"),
                        icon: Icon(
                          Icons.delete,
                          color: Colors.white,
                        ),
                        onPressed: () {
                          showDialog(
...
